--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,27 +1,12 @@
-# Database
-DATABASE_URL="file:./dev.db"
-
-# Server Configuration
-PORT=3001
-NODE_ENV=development
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# Backend Environment Variables (Set in Render Dashboard)
+NODE_ENV=production
+DATABASE_URL=postgresql://username:password@host:port/database
+JWT_SECRET=your-super-secure-jwt-secret-32-characters-minimum
 JWT_EXPIRES_IN=7d
-
-# CORS Configuration
-FRONTEND_URL=http://localhost:5173
-
-# Google Gemini AI (optional - for AI features)
+FRONTEND_URL=https://your-frontend-url.vercel.app
 GEMINI_API_KEY=your-gemini-api-key-here
-
-# File Upload Configuration
 MAX_FILE_SIZE=5242880
 UPLOAD_PATH=./uploads
-
-# Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-
-# Logging
 LOG_LEVEL=info
