Fix CORS configuration and update deployment URLs for odmailsu.vercel.app

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,12 +1,11 @@
-# Production Environment Variables for Vercel
-# Copy these to your Vercel project settings
+# Frontend Environment Variables for Vercel
+# Copy these to your Vercel project environment variables
 
-# Supabase Configuration
-VITE_SUPABASE_URL=https://zrsfmghkjhxkjjzkigck.supabase.co
-VITE_SUPABASE_ANON_KEY=[YOUR-ANON-KEY]
+# Backend API URL (Your actual Render backend URL)
+VITE_API_URL=https://onward-dominicans-backend-v2.onrender.com/api
 
-# API Configuration
-VITE_API_BASE_URL=https://your-backend-url.com/api
+# Optional: Google Gemini API Key for AI features
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
 # Environment
 NODE_ENV=production
