--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,25 @@
-# Backend Environment Variables
-NODE_ENV=development
+# Backend Environment Variables for Render
+# Set these in your Render dashboard environment variables
 
-# Supabase Database Configuration
-DATABASE_URL="postgresql://postgres:[YOUR-PASSWORD]@db.zrsfmghkjhxkjjzkigck.supabase.co:5432/postgres"
+# Production Environment
+NODE_ENV=production
+
+# Supabase Database Configuration (Use pooled connection for production)
+DATABASE_URL="postgresql://postgres.zrsfmghkjhxkjjzkigck:[YOUR-PASSWORD]@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
 
 # Supabase API Configuration
 SUPABASE_URL="https://zrsfmghkjhxkjjzkigck.supabase.co"
 SUPABASE_ANON_KEY="[YOUR-ANON-KEY]"
 SUPABASE_SERVICE_ROLE_KEY="[YOUR-SERVICE-ROLE-KEY]"
 
-# JWT Configuration (if keeping custom auth)
+# JWT Configuration
 JWT_SECRET=your-super-secure-jwt-secret-32-characters-minimum
 JWT_EXPIRES_IN=7d
 
-# Frontend Configuration
-FRONTEND_URL=http://localhost:5173
+# Frontend Configuration (Your Vercel URL)
+FRONTEND_URL=https://odmailsu.vercel.app
 
-# Google AI Configuration
+# Google AI Configuration (Optional)
 GEMINI_API_KEY=your-gemini-api-key-here
 
 # File Upload Configuration
@@ -29,3 +32,7 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
 LOG_LEVEL=info
+
+# Database Connection Settings
+PGCONNECT_TIMEOUT=60
+PGCOMMAND_TIMEOUT=60
