--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "build": "tsc && prisma generate",
-    "start": "prisma db push && node seed-production.js && node dist/app.js",
+    "build": "tsc && prisma generate && prisma db push",
+    "start": "node dist/app.js",
     "postinstall": "prisma generate",
     "prepare:production": "node scripts/prepare-production.js",
     "db:generate": "prisma generate",
