Rename admin interface to secret.html for security
- Renamed admin.html to secret.html to make admin panel less discoverable
- Updated vite.config.ts to build secret.html instead of admin.html
- Updated vercel.json routing to use /secret instead of /admin
- Changed page title to 'Secret Dashboard' for consistency
- All admin functionality remains the same, just accessed via /secret URL

--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,15 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/admin",
-      "destination": "/admin.html"
+      "source": "/secret",
+      "destination": "/secret.html"
     },
     {
-      "source": "/admin.html",
-      "destination": "/admin.html"
+      "source": "/secret.html",
+      "destination": "/secret.html"
     },
     {
-      "source": "/((?!api/|admin).*)",
+      "source": "/((?!api/|secret).*)",
       "destination": "/index.html"
     }
   ],
