--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,15 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/secret",
-      "destination": "/secret.html"
+      "source": "/admin",
+      "destination": "/admin.html"
     },
     {
-      "source": "/secret.html",
-      "destination": "/secret.html"
+      "source": "/admin.html",
+      "destination": "/admin.html"
     },
     {
-      "source": "/((?!api/|secret).*)",
+      "source": "/((?!api/|admin).*)",
       "destination": "/index.html"
     }
   ],
