Rename admin interface to nyegaman for enhanced security
- Renamed admin.html to nyegaman.html to make admin panel less discoverable
- Updated vite.config.ts to build nyegaman.html instead of admin.html
- Updated vercel.json routing to use /nyegaman instead of /admin
- Changed page title to 'Nyegaman Dashboard' for consistency
- All admin functionality remains the same, just accessed via /nyegaman URL

--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,15 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/admin",
-      "destination": "/admin.html"
+      "source": "/nyegaman",
+      "destination": "/nyegaman.html"
     },
     {
-      "source": "/admin.html",
-      "destination": "/admin.html"
+      "source": "/nyegaman.html",
+      "destination": "/nyegaman.html"
     },
     {
-      "source": "/((?!api/|admin).*)",
+      "source": "/((?!api/|nyegaman).*)",
       "destination": "/index.html"
     }
   ],
