Deploy: Add SEO optimization, Google Search Console verification, and deployment configurations
- Added comprehensive SEO setup with meta tags, Open Graph, and Twitter Cards
- Implemented Google Search Console verification file (google25e0604217c35b35.html)
- Added Bing Webmaster Tools verification (BingSiteAuth.xml)
- Created dynamic sitemap generation and news sitemap
- Added robots.txt with proper crawling instructions
- Implemented structured data (JSON-LD) for better search visibility
- Added SEO analytics component and tracking setup
- Created comprehensive deployment guides and checklists
- Optimized for Google Search Console submission
- Ready for production deployment and search engine indexing

--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "deploy:gh-pages": "npm run build && gh-pages -d dist",
     "deploy:setup": "bash deploy-setup.sh",
     "keep-alive": "node keep-alive.js",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build",
+    "seo:setup": "node scripts/seo-setup.js",
+    "seo:sitemap": "node scripts/generate-sitemap.js",
+    "seo:validate": "node scripts/validate-seo.js",
+    "seo:codes": "node scripts/update-tracking-codes.js",
+    "seo:audit": "lighthouse https://onward-dominicans.vercel.app --output=html --output-path=./seo-audit.html"
   },
   "dependencies": {
     "@google/genai": "^1.4.0",
