Fix Vercel deployment: Remove postbuild react-snap to prevent Chrome dependency issues
- Remove automatic postbuild react-snap execution
- Add conditional static generation script for local/CI environments
- Update vercel.json configuration
- Preserve SEO static generation capabilities for local development
- Fixes deployment failure due to missing libnss3.so in Vercel build environment

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "seo:post-verification": "node scripts/post-verification-checklist.js",
     "seo:validate-sitemap": "node scripts/validate-sitemap.js",
     "seo:quick-fixes": "node scripts/seo-quick-fixes.js",
-    "build:static": "npm run build && react-snap",
-    "postbuild": "react-snap",
+    "build:static": "node scripts/build-static.js",
+    "build:static-force": "npm run build && react-snap",
     "generate:static": "node scripts/generate-static-pages.js",
     "build:seo": "npm run build && npm run generate:static"
   },
