Implement Vite SSG solution for SEO while preserving admin dashboard functionality
✅ Phase 1: Vite SSG Implementation
- Add static site generation script that works with admin dashboard content
- Generate individual article pages with proper SEO meta tags
- Update Vercel configuration to serve static article pages
- Preserve admin dashboard editing capabilities at /nyegaman.html
- Add fallback article data (can be enhanced to fetch from Supabase)
- Update build process to include SSG generation

🔧 Technical Changes:
- New scripts: generate-ssg-pages.js, prerender-pages.js
- Updated package.json with SSG build commands
- Enhanced Vite config for better SEO
- Updated Vercel rewrites for article routing
- ES module compatibility for all scripts

🎯 SEO Benefits:
- Individual article URLs: /article/[slug].html
- Proper meta tags and Open Graph data
- Canonical URLs for better indexing
- Static HTML for search engine crawlers

📝 Admin Dashboard Integration:
- Content created in admin dashboard can be used for SSG
- Preserves all existing admin functionality
- Ready for Supabase integration enhancement

--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "seo:quick-fixes": "node scripts/seo-quick-fixes.js",
     "build:static": "node scripts/build-static.js",
     "build:static-force": "npm run build && react-snap",
+    "build:ssg": "npm run build && node scripts/generate-ssg-pages.js",
     "generate:static": "node scripts/generate-static-pages.js",
-    "build:seo": "npm run build && npm run generate:static"
+    "build:seo": "npm run build && npm run generate:static",
+    "prerender": "node scripts/prerender-pages.js"
   },
   "dependencies": {
     "@google/genai": "^1.4.0",
@@ -43,7 +45,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-snap": "^1.23.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "vite-plugin-ssr": "^0.4.142"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
