🚀 Enhanced Vite SSG with comprehensive SEO and admin dashboard integration
✨ Major Enhancements:
- Enhanced SSG script with comprehensive SEO meta tags
- Added Open Graph, Twitter Cards, and Schema.org structured data
- Improved Supabase integration with timeout and fallback handling
- Generated sitemap-articles.xml for better search engine indexing
- Enhanced HTML templates with proper semantic structure

🔧 Admin Dashboard Integration:
- Added SSG generation hooks to admin dashboard
- Created webhook system for triggering SSG from admin panel
- Enhanced build process with better error handling
- Added admin enhancement scripts for future integration

📊 SEO Improvements:
- Comprehensive meta tags for each article page
- Structured data (JSON-LD) for rich snippets
- Proper canonical URLs and social media tags
- Enhanced sitemap generation with all site URLs
- Better HTML structure for accessibility and SEO

🛠️ Technical Features:
- Environment-aware build process
- Timeout handling for API requests
- Fallback content system
- Enhanced error handling and logging
- Modular script architecture

🎯 Results:
- Individual article pages with full SEO optimization
- Admin dashboard can trigger static page regeneration
- Better search engine indexing capabilities
- Preserved all existing admin functionality
- Ready for production deployment

--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "build:ssg": "npm run build && node scripts/generate-ssg-pages.js",
     "generate:static": "node scripts/generate-static-pages.js",
     "build:seo": "npm run build && npm run generate:static",
-    "prerender": "node scripts/prerender-pages.js"
+    "prerender": "node scripts/prerender-pages.js",
+    "enhance:admin": "node scripts/enhance-admin-integration.js",
+    "ssg:generate": "node scripts/generate-ssg-pages.js",
+    "ssg:webhook": "node scripts/ssg-webhook.js"
   },
   "dependencies": {
     "@google/genai": "^1.4.0",
