🚀 Complete Advanced SSG Enhancement Suite - All Features Implemented
🎯 REAL-TIME SUPABASE INTEGRATION ✅
- Fixed Supabase API key and connection
- Live content fetching from admin dashboard
- Real-time article, author, category, and tag data
- Enhanced error handling with fallback system

🔄 AUTOMATED REGENERATION SYSTEM ✅
- Created Vercel serverless function for SSG regeneration
- Admin dashboard integration with regeneration button
- Webhook system for triggering deployments
- Automated deployment hooks for content updates

📂 CATEGORY PAGES GENERATION ✅
- Dynamic category page generation from live content
- SEO-optimized category listing pages
- Responsive grid layout with article previews
- Updated Vercel routing for category URLs

🔍 SEARCH FUNCTIONALITY ✅
- Static search index generation (full + lightweight)
- Client-side search with real-time filtering
- Search page with responsive results
- Indexed content: titles, summaries, authors, categories

🖼️ PERFORMANCE OPTIMIZATION ✅
- Advanced lazy loading with Intersection Observer
- Image optimization with responsive srcsets
- Loading animations and fallback placeholders
- Optimized HTML with performance enhancements

🛠️ TECHNICAL ACHIEVEMENTS:
- 16 HTML files optimized with lazy loading
- 5 live articles fetched from admin dashboard
- 4 category pages generated automatically
- Search index with 5 articles created
- Comprehensive sitemap generation
- Enhanced admin dashboard integration

📊 SEO & PERFORMANCE RESULTS:
- Individual article pages: /article/[slug].html
- Category pages: /category/[slug].html
- Search functionality: /search with live index
- Optimized images with lazy loading
- Comprehensive meta tags and structured data
- Real-time content updates from admin dashboard

🎉 ADMIN DASHBOARD INTEGRATION:
- One-click site regeneration button
- Real-time content management preserved
- Webhook integration for automated updates
- Enhanced UI with regeneration status

All requested enhancements successfully impleme

--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "prerender": "node scripts/prerender-pages.js",
     "enhance:admin": "node scripts/enhance-admin-integration.js",
     "ssg:generate": "node scripts/generate-ssg-pages.js",
-    "ssg:webhook": "node scripts/ssg-webhook.js"
+    "ssg:webhook": "node scripts/ssg-webhook.js",
+    "search:generate": "node scripts/generate-search-index.js",
+    "optimize:images": "node scripts/optimize-images.js"
   },
   "dependencies": {
     "@google/genai": "^1.4.0",
