--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,11 @@
       "destination": "/article/$1.html"
     },
     {
-      "source": "/((?!api/|nyegaman|article).*)",
+      "source": "/category/(.*)",
+      "destination": "/category/$1.html"
+    },
+    {
+      "source": "/((?!api/|nyegaman|article|category).*)",
       "destination": "/index.html"
     }
   ],
