--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.4.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@vercel/analytics": "^1.5.0",
     "next": "^15.1.0",
     "react": "^19.1.0",
@@ -59,7 +60,8 @@
     "react-router-dom": "^7.6.2",
     "react-snap": "^1.23.0",
     "tailwindcss": "^3.4.17",
-    "vite-plugin-ssr": "^0.4.142"
+    "vite-plugin-ssr": "^0.4.142",
+    "web-vitals": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
