Add SEO improvements and content updates
- Added Google Search Console verification files
- Updated sitemaps and robots.txt
- Added SEO analysis and action plan
- Created content suggestion system
- Added new pages for culture and news
- Implemented SEO validation scripts

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "seo:sitemap": "node scripts/generate-sitemap.js",
     "seo:validate": "node scripts/validate-seo.js",
     "seo:codes": "node scripts/update-tracking-codes.js",
-    "seo:audit": "lighthouse https://onward-dominicans.vercel.app --output=html --output-path=./seo-audit.html"
+    "seo:audit": "lighthouse https://onward-dominicans.vercel.app --output=html --output-path=./seo-audit.html",
+    "seo:post-verification": "node scripts/post-verification-checklist.js",
+    "seo:validate-sitemap": "node scripts/validate-sitemap.js",
+    "seo:quick-fixes": "node scripts/seo-quick-fixes.js"
   },
   "dependencies": {
     "@google/genai": "^1.4.0",
